Primeiros ajustes visuais para identidade visual do sistema

--- a/web/layouts/sistema/rodape.phtml
+++ b/web/layouts/sistema/rodape.phtml
@@ -1,3 +1,14 @@
+<div class="footer">
+    <div class="pull-right">
+        Desenvolvido por
+        <strong>Alana Silva</strong> |
+        <strong>Douglas Oliveira</strong> |
+        <strong>Edyelgue Carneiro</strong> |
+        <strong>Kauan Nascimento</strong><br>
+        <strong>Mais1Code</strong> em parceria com a
+        <strong>Food Finder</strong>
+    </div>
+</div>
 </div>
 </body>
 </html>
