--- a/web/views/error/index.phtml
+++ b/web/views/error/index.phtml
@@ -1,1 +1,6 @@
-ops
+<div class="error404">
+    <img src="/assets/images/404.png"><br>
+    <p>Oops!</p>
+    <p>A página que você tentou acessar não pode ser encontrada.</p>
+    <p>Por favor, tente novamente. Se o problema persistir, contate o suporte do sistema.</p>
+</div>
