--- a/web/layouts/login/cabecalho.phtml
+++ b/web/layouts/login/cabecalho.phtml
@@ -6,28 +6,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/logins/login-4/assets/css/login-4.css">
-    <style>
-        body {
-            background-color: rgb(248, 249, 250) !important;
-        }
-    </style>
+    <script src="https://kit.fontawesome.com/ce211dcce0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 
 <body>
 <!-- Login 4 - Bootstrap Brain Component -->
 <section class="p-3 p-md-4 p-xl-5">
     <div class="container">
-        <div class="card border-light-subtle shadow-sm">
+        <div class="border-light-subtle">
             <div class="row g-0">
-                <div class="col-12 col-md-6">
-                    <img class="img-fluid rounded-start w-100 h-100 object-fit-cover" loading="lazy" src="https://bootstrapbrain.com/demo/components/logins/login-4/assets/img/logo-img-1.webp" alt="BootstrapBrain Logo">
+                <div class="col-12 col-md-6 container-logo">
+                    <div class="logo"></div>
                 </div>
                 <div class="col-12 col-md-6">
-                    <div class="card-body p-3 p-md-4 p-xl-5">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="mb-5">
-                                    <h3>Food Finder Jobs</h3>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="p-3 p-md-4 p-xl-5">
