--- a/web/layouts/login/rodape.phtml
+++ b/web/layouts/login/rodape.phtml
@@ -2,8 +2,9 @@
     <div class="col-12">
         <hr class="mt-5 mb-4 border-secondary-subtle">
         <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
+            <a href="/" class="link-secondary text-decoration-none">Painel</a>
             <a href="/empresa/cadastrar" class="link-secondary text-decoration-none">Cadastrar minha empresa</a>
-            <a href="/esqueci_senha.php" class="link-secondary text-decoration-none">Esqueci minha senha</a>
+            <a href="/usuario/esqueci-senha" class="link-secondary text-decoration-none">Esqueci minha senha</a>
         </div>
     </div>
 </div>
