--- a/web/views/usuario/listar.phtml
+++ b/web/views/usuario/listar.phtml
@@ -1,17 +1,30 @@
 <table class="table table-bordered table-striped table-hover caption-top">
     <caption>Usuários da minha empresa</caption>
+    <thead>
+    <tr>
+        <th class="minimal">#</th>
+        <th>CPF</th>
+        <th>Nome</th>
+        <th>E-mail</th>
+        <th class="minimal">
+            <i class="fas fa-cog"></i>
+        </th>
+    </tr>
+    </thead>
+    <tbody>
     <?php foreach ($usuarios as $usuarioAtual) : ?>
         <tr>
-            <td><?= $usuarioAtual->getId(); ?></td>
+            <td class="minimal"><?= $usuarioAtual->getId(); ?></td>
             <td><?= $usuarioAtual->getCpf(); ?></td>
             <td><?= $usuarioAtual->getNome(); ?></td>
             <td><?= $usuarioAtual->getEmail(); ?></td>
-            <td>
-                <a class="btn btn-primary btn-sm" href="/usuario/editar?id=<?= $usuarioAtual->getId() ?>">Editar</a>
+            <td class="minimal">
+                <a class="btn btn-primary btn-sm" href="/usuario/editar?id=<?= $usuarioAtual->getId() ?>" title="Editar"><i class="fas fa-edit"></i></a>
                 <?php if ($usuarioAtual->getId() !== $_SESSION['usuario']->getId()) : ?>
-                    <a class="btn btn-primary btn-sm" href="/usuario/excluir?id=<?= $usuarioAtual->getId() ?>">Excluir</a>
+                    <a class="btn btn-danger btn-sm" href="/usuario/excluir?id=<?= $usuarioAtual->getId() ?>" title="Excluir"><i class="fas fa-trash"></i></a>
                 <?php endif; ?>
             </td>
         </tr>
     <?php endforeach; ?>
+    </tbody>
 </table>
