--- a/web/views/vaga/listar.phtml
+++ b/web/views/vaga/listar.phtml
@@ -1,14 +1,24 @@
 <table class="table table-bordered table-striped table-hover caption-top">
     <caption>Minhas vagas</caption>
+    <thead>
+        <tr>
+            <th class="minimal">#</th>
+            <th>Título</th>
+            <th>Status</th>
+            <th class="minimal"><i class="fas fa-cog"></i></th>
+        </tr>
+    </thead>
+    <tbody>
     <?php foreach ($vagas as $vaga) : ?>
         <tr>
-            <td><?= $vaga->getId() ?></td>
+            <td class="minimal"><?= $vaga->getId() ?></td>
             <td><?= $vaga->getTitulo() ?></td>
-            <td><?= $vaga->getStatus(true) ?></td>
-            <td>
-                <a class="btn btn-primary btn-sm" href="/vaga/editar?id=<?= $vaga->getId() ?>">Editar</a>
-                <a class="btn btn-primary btn-sm" href="/vaga/excluir?id=<?= $vaga->getId() ?>">Excluir</a>
+            <td class="reduced"><?= $vaga->getStatus(true) ?></td>
+            <td class="minimal">
+                <a class="btn btn-primary btn-sm" href="/vaga/editar?id=<?= $vaga->getId() ?>" title="Editar"><i class="fas fa-edit"></i></a>
+                <a class="btn btn-danger btn-sm" href="/vaga/excluir?id=<?= $vaga->getId() ?>" title="Excluir"><i class="fas fa-trash"></i></a>
             </td>
         </tr>
     <?php endforeach; ?>
+    </tbody>
 </table>
