--- a/web/views/candidato/cadastrar.phtml
+++ b/web/views/candidato/cadastrar.phtml
@@ -38,7 +38,7 @@
         <div class="col-12">
             <label for="status" class="col-form-label col-md-2">Disponibilidade <span class="text-danger">*</span></label>
             <div class="col-12">
-                <select class="form-control" name="disponibilidade" id="disponibilidade">
+                <select class="form-control form-select" name="disponibilidade" id="disponibilidade">
                     <option value="" disabled selected>Selecione sua disponibilidade</option>
                     <option value="3">Disponibilidade Imediata</option>
                     <option value="2">Disponível após 30 dias</option>
@@ -50,7 +50,7 @@
         <div class="col-12">
             <label for="status" class="col-form-label col-md-2">Sexo <span class="text-danger">*</span></label>
             <div class="col-12">
-                <select class="form-control" name="sexo" id="sexo">
+                <select class="form-control form-select" name="sexo" id="sexo">
                     <option value="" disabled selected>Selecione</option>
                     <option value="F">Feminino</option>
                     <option value="M">Masculino</option>
@@ -60,7 +60,7 @@
         <div class="col-12">
             <label for="status" class="col-form-label col-md-2">Gênero <span class="text-danger">*</span></label>
             <div class="col-12">
-                <select class="form-control" name="genero" id="genero">
+                <select class="form-control form-select" name="genero" id="genero">
                     <option value="" disabled selected>Selecione</option>
                     <option value="C">Cisgênero</option>
                     <option value="T">Transgênero</option>
@@ -71,7 +71,7 @@
         <div class="col-12">
             <label for="status" class="col-form-label col-md-2">Status <span class="text-danger">*</span></label>
             <div class="col-12">
-                <select class="form-control" name="status" id="status">
+                <select class="form-control form-select" name="status" id="status">
                     <option value="1">Ativa</option>
                     <option value="0">Inativa</option>
                 </select>
