--- a/web/views/autenticacao/login.phtml
+++ b/web/views/autenticacao/login.phtml
@@ -10,24 +10,37 @@
                 <span>*</span></label>
             <input type="password" class="form-control" name="senha" id="senha" value="" placeholder="*****" required>
         </div>
-        <div class="col-12">
+        <div class="col-12 d-flex justify-content-between">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" name="remember_me" id="remember_me">
                 <label class="form-check-label" for="remember_me">
                     Mantenha-me logado
                 </label>
             </div>
+            <a href="/usuario/esqueci-senha" class="link-secondary text-decoration-none">Esqueci minha senha</a>
         </div>
         <div class="col-12">
             <div class="d-grid">
                 <button id="icon-button" class="btn btn-primary" type="submit">
                     <i class="fas fa-lock icon-transition"></i>
                     <i class="fas fa-lock-open icon-transition" style="display: none;"></i>
-                    Acessar</button>
+                    Acessar
+                </button>
             </div>
         </div>
     </div>
 </form>
+
+<div class="row">
+    <div class="col-12">
+        <hr class="mt-5 mb-4 border-secondary-subtle">
+        <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-between">
+            <a href="/" class="link-secondary text-decoration-none">Painel de vagas</a>
+            <a href="/empresa/cadastrar" class="link-secondary text-decoration-none">Cadastrar minha empresa</a>
+
+        </div>
+    </div>
+</div>
 
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
