--- a/web/views/usuario/formulario.phtml
+++ b/web/views/usuario/formulario.phtml
@@ -1,26 +1,29 @@
-<form method="post" action="/usuario/salvar">
-    <input type="hidden" name="usuarioId" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getId() : '' ?>"/>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="cpf" class="col-form-label col-md-2">CPF</label>
-        <div class="col-md-10">
-            <input type="text" class="form-control" name="cpf" id="cpf" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getCpf() : '' ?>">
+<div class="container container-sm w-50">
+    <form method="post" action="/usuario/salvar">
+        <input type="hidden" name="usuarioId" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getId() : '' ?>"/>
+        <div class="row g-3 align-items-center mb-2">
+            <label for="nome" class="col-form-label text-end align-content-end col-md-2">Nome</label>
+            <div class="col-md-10">
+                <input type="text" class="form-control" name="nome" id="nome" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getNome() : '' ?>" placeholder="Nome do usuário">
+            </div>
         </div>
-    </div>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="nome" class="col-form-label col-md-2">Nome</label>
-        <div class="col-md-10">
-            <input type="text" class="form-control" name="nome" id="nome" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getNome() : '' ?>">
+        <div class="row g-3 align-items-center mb-2">
+            <label for="cpf" class="col-form-label text-end align-content-end col-md-2">CPF <span class="text-danger">*</span></label></label>
+            <div class="col-md-3">
+                <input type="text" class="form-control" name="cpf" id="cpf" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getCpf() : '' ?>" placeholder="CPF">
+            </div>
+            <label for="email" class="col-form-label text-end align-content-end col-md-2">E-mail</label>
+            <div class="col-md-5">
+                <input type="text" class="form-control" name="email" id="email" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getEmail() : '' ?>" placeholder="E-mail do usuário">
+            </div>
         </div>
-    </div>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="email" class="col-form-label col-md-2">Email</label>
-        <div class="col-md-10">
-            <input type="text" class="form-control" name="email" id="email" value="<?= isset($usuarioEdicao) ? $usuarioEdicao->getEmail() : '' ?>">
+
+        <div class="row gy-3 gy-md-4 overflow-hidden mt-4 mb-2">
+            <div class="col-12">
+                <div class="d-grid">
+                    <button class="btn btn-primary" type="submit"><i class="fas fa-save"></i> Salvar</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="row g-3 align-items-center">
-        <div class="col-md-12 d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-            <button class="btn btn-primary">Salvar</button>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
