--- a/web/views/vaga/formulario.phtml
+++ b/web/views/vaga/formulario.phtml
@@ -1,60 +1,65 @@
-<form method="post" action="/vaga/salvar">
-    <input type="hidden" name="vagaId" value="<?= isset($vaga) ? $vaga->getId() : '' ?>"/>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="titulo" class="col-form-label col-md-2">Título</label>
-        <div class="col-md-10">
-            <input type="text" class="form-control" name="titulo" id="titulo" value="<?= isset($vaga) ? $vaga->getTitulo() : '' ?>">
+<div class="container container-sm w-75">
+    <form method="post" action="/vaga/salvar">
+        <input type="hidden" name="vagaId" value="<?= isset($vaga) ? $vaga->getId() : '' ?>"/>
+        <div class="row g-3 align-items-center mb-2">
+            <div class="col-md-12 form-floating">
+                <input type="text" class="form-control" name="titulo" id="titulo" value="<?= isset($vaga) ? $vaga->getTitulo() : '' ?>">
+                <label for="titulo" class="col-form-label">Título</label>
+            </div>
         </div>
-    </div>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="email" class="col-form-label col-md-2">Email</label>
-        <div class="col-md-10">
-            <input type="text" class="form-control" name="email" id="email" value="<?= isset($vaga) ? $vaga->getEmail() : '' ?>">
+        <div class="row g-3 align-items-center mb-2">
+            <div class="col-md-4 form-floating">
+                <input type="text" class="form-control" name="email" id="email" value="<?= isset($vaga) ? $vaga->getEmail() : '' ?>">
+                <label for="email" class="col-form-label">Email</label>
+            </div>
+
+            <div class="col-md-4">
+                <div class="input-group">
+                    <span class="input-group-text">R$</span>
+                    <div class="form-floating">
+                        <input type="number" class="form-control" name="salario" id="salario" value="<?= isset($vaga) ? $vaga->getSalario() : '' ?>" min="0">
+                        <label for="salario" class="col-form-label">Salário</label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 form-floating">
+                <input type="number" class="form-control" name="cargaHoraria" id="cargaHoraria" value="<?= isset($vaga) ? $vaga->getCargaHoraria() : '' ?>" min="0">
+                <label for="cargaHoraria" class="col-form-label">Carga horária</label>
+            </div>
         </div>
-    </div>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="salario" class="col-form-label col-md-2">Salário</label>
-        <div class="col-md-10">
-            <input type="number" class="form-control" name="salario" id="salario" value="<?= isset($vaga) ? $vaga->getSalario() : '' ?>" min="0">
+        <div class="row g-3 align-items-center mb-2">
+            <div class="col-md-12 form-floating">
+                <textarea class="form-control" cols="50" name="descricao" id="descricao" style="min-height: 100px;"><?= isset($vaga) ? $vaga->getDescricao() : '' ?></textarea>
+                <label for="descricao" class="col-form-label">Descrição</label>
+            </div>
         </div>
-    </div>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="beneficios" class="col-form-label col-md-2">Benefícios</label>
-        <div class="col-md-10">
-            <!--                <textarea class="form-control" cols="50" name="beneficios" id="beneficios"></textarea>-->
-            <input type="text" class="form-control" name="beneficios" id="beneficios" value="<?= isset($vaga) ? $vaga->getBeneficios() : '' ?>">
+        <div class="row g-3 align-items-center mb-2">
+            <div class="col-md-6 form-floating">
+                <textarea class="form-control" name="beneficios" id="beneficios" style="min-height: 100px;"><?= isset($vaga) ? $vaga->getBeneficios() : '' ?></textarea>
+                <label for="beneficios" class="col-form-label">Benefícios</label>
+            </div>
+            <div class="col-md-6 form-floating">
+                <textarea class="form-control" cols="50" name="requisitos" id="requisitos" style="min-height: 100px;"><?= isset($vaga) ? $vaga->getRequisitos() : '' ?></textarea>
+                <label for="requisitos" class="col-form-label">Requisitos</label>
+            </div>
         </div>
-    </div>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="descricao" class="col-form-label col-md-2">Descrição</label>
-        <div class="col-md-10">
-            <textarea class="form-control" cols="50" name="descricao" id="descricao"><?= isset($vaga) ? $vaga->getDescricao() : '' ?></textarea>
+
+        <div class="row g-3 align-items-center mb-2">
+            <div class="col-md-3 form-floating">
+                <select class="form-control form-select" name="status" id="status">
+                    <option value="1" <?= !empty($vaga) && $vaga->getStatus() == '1' ? 'selected' : '' ?>>Ativa</option>
+                    <?php if (!empty($vaga)) : ?>
+                        <option value="0" <?= !empty($vaga) && $vaga->getStatus() == '0' ? 'selected' : '' ?>>Inativa</option>
+                    <?php endif; ?>
+                </select>
+                <label for="status" class="col-form-label">Status</label>
+            </div>
         </div>
-    </div>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="requisitos" class="col-form-label col-md-2">Requisitos</label>
-        <div class="col-md-10">
-            <textarea class="form-control" cols="50" name="requisitos" id="requisitos"><?= isset($vaga) ? $vaga->getRequisitos() : '' ?></textarea>
+        <div class="row g-3 align-items-center">
+            <div class="col-md-12 d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
+                <button class="btn btn-primary">Salvar</button>
+            </div>
         </div>
-    </div>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="cargaHoraria" class="col-form-label col-md-2">Carga horária</label>
-        <div class="col-md-10">
-            <input type="number" class="form-control" name="cargaHoraria" id="cargaHoraria" value="<?= isset($vaga) ? $vaga->getCargaHoraria() : '' ?>" min="0">
-        </div>
-    </div>
-    <div class="row g-3 align-items-center mb-2">
-        <label for="status" class="col-form-label col-md-2">Status</label>
-        <div class="col-md-10">
-            <select class="form-control" name="status" id="status">
-                <option value="1" <?= !empty($vaga) && $vaga->getStatus() == '1' ? 'selected' : '' ?>>Ativa</option>
-                <option value="0" <?= !empty($vaga) && $vaga->getStatus() == '0' ? 'selected' : '' ?>>Inativa</option>
-            </select>
-        </div>    
-    </div>
-    <div class="row g-3 align-items-center">
-        <div class="col-md-12 d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-            <button class="btn btn-primary">Salvar</button>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
