Ajuste de cadastro de candidato e painel de vagas

--- a/web/assets/css/sistema.css
+++ b/web/assets/css/sistema.css
@@ -94,3 +94,7 @@ input.form-control {
     color: #999999 !important;
     border-color: transparent;
 }
+
+.form-floating>.form-control:not(:placeholder-shown)~label {
+    transform: scale(0.85) translateY(-0.5rem) translateX(0.50rem);
+}
