--- a/web/layouts/painel-vagas/cabecalho.phtml
+++ b/web/layouts/painel-vagas/cabecalho.phtml
@@ -5,11 +5,14 @@
     <title>Mais1Code - Projeto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ce211dcce0.js" crossorigin="anonymous"></script>
+    <link href="/assets/css/painel.css" rel="stylesheet"/>
 </head>
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
     <div class="container-fluid">
+        <a class="navbar-brand logo" href="/autenticacao"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -17,7 +20,19 @@
         <div class=" collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto ">
                 <li class="nav-item">
-                    <a class="nav-link mx-2 active" aria-current="page" href="/autenticacao/">Admin</a>
+                    <a class="nav-link mx-2 active" aria-current="page" href="/">
+                        <i class="fas fa-briefcase"></i> Painel de vagas
+                    </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link mx-2 active" aria-current="page" href="/autenticacao/">
+                        <i class="fas fa-building"></i> Área da Empresa
+                    </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link mx-2 active" aria-current="page" href="/candidato/cadastrar">
+                        <i class="fas fa-users"></i> Área do candidato
+                    </a>
                 </li>
             </ul>
         </div>
