--- a/web/views/vaga/formulario.phtml
+++ b/web/views/vaga/formulario.phtml
@@ -56,9 +56,11 @@
                 <label for="status" class="col-form-label">Status</label>
             </div>
         </div>
-        <div class="row g-3 align-items-center">
-            <div class="col-md-12 d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
-                <button class="btn btn-primary">Salvar</button>
+        <div class="row gy-3 gy-md-4 overflow-hidden mt-4 mb-2">
+            <div class="col-12">
+                <div class="d-grid">
+                    <button class="btn btn-primary" type="submit"><i class="fas fa-save"></i> Salvar</button>
+                </div>
             </div>
         </div>
     </form>
