--- a/web/assets/css/painel.css
+++ b/web/assets/css/painel.css
@@ -66,6 +66,46 @@ input.form-control {
     border-color: transparent;
 }
 
-.form-floating>.form-control:not(:placeholder-shown)~label {
+.form-floating > .form-control:not(:placeholder-shown) ~ label {
     transform: scale(0.85) translateY(-0.5rem) translateX(0.50rem);
+}
+
+td {
+    background-color: #093B6E !important;
+}
+
+td div {
+    background-color: #F1F3F4;
+}
+
+table, table td {
+    border-color: #093B6E !important;
+    border-width: 10px !important;
+}
+
+.titulo {
+    /*background-color: #093B6E;*/
+    color: white !important;;
+    /*border-style: solid;*/
+    /*border-width: 1px 0 0 0;*/
+    /*border-color: #F1F3F4 !important;*/
+    background: rgb(9,59,110);
+    background: linear-gradient(180deg, rgba(9,59,110,1) 80%, rgba(241,243,244,1) 100%);
+    height: 40px;
+
+}
+
+.titulo a {
+    text-decoration: none;
+    color: white
+}
+
+.ver-mais {
+    background: linear-gradient(180deg, rgba(241, 243, 244, 1) 0%, rgba(9, 59, 110, 1) 40%);
+    height: 40px;
+}
+
+.ver-mais a {
+    text-decoration: none;
+    color: white
 }
