adição de cabecalho e rodape do candidato para o controller renderizer e melhoria na view candidato cadastrar.phtml

--- a/web/views/candidato/cadastrar.phtml
+++ b/web/views/candidato/cadastrar.phtml
@@ -13,10 +13,16 @@
             <div class="col-6 form-floating">
                 <input type="email" class="form-control" name="email" id="email" required>
                 <label for="email" class="form-label">Email</label>
+                <div class="notification" id="notification">
+                mail@exemplo.com
+        </div>
             </div>
             <div class="col-6 form-floating">
                 <input type="password" class="form-control" name="senha" id="senha" required>
                 <label for="senha" class="form-label">Senha *</label>
+                <div class="notification" id="notification">
+                mínimo 8 caracteres
+        </div>
             </div>
             <div class="col-12 form-floating">
                 <textarea class="form-control" name="habilidades" id="habilidades" required style="min-height: 100px"></textarea>
