alteração de max e min legth para email e senha

--- a/web/views/candidato/cadastrar.phtml
+++ b/web/views/candidato/cadastrar.phtml
@@ -11,14 +11,14 @@
                 <label for="cpf" class="form-label">CPF *</label>
             </div>
             <div class="col-6 form-floating">
-                <input type="email" class="form-control" name="email" id="email" required>
+                <input type="email" class="form-control" name="email" id="email" maxlength="30" required>
                 <label for="email" class="form-label">Email</label>
                 <div class="notification" id="notification">
                 mail@exemplo.com
         </div>
             </div>
             <div class="col-6 form-floating">
-                <input type="password" class="form-control" name="senha" id="senha" required>
+            <input type="password" class="form-control" name="senha" id="senha" minlength="8" required>
                 <label for="senha" class="form-label">Senha *</label>
                 <div class="notification" id="notification">
                 mínimo 8 caracteres
