alterado link do menu area-do-candidato para login do candidato e voce-e-novo-aqui-cadastrar link alterado para formulario de cadastro

--- a/web/views/candidato/login.phtml
+++ b/web/views/candidato/login.phtml
@@ -27,7 +27,7 @@
                     <i class="fas fa-lock-open icon-transition" style="display: none;"></i>
                     Acessar
                 </button>
-                    <button class="btn btn-secondary mt-3">Você é novo aqui? Cadastrar</button>
+                <button class="btn btn-secondary mt-3"><a href="/candidato/cadastrar" class="link-secondary text-decoration-none">Você é novo aqui? Cadastrar</a></button>
             </div>
         </div>
 
