Criado a action que recebe a requisicao do front da tela de login

--- a/web/views/candidato/login.phtml
+++ b/web/views/candidato/login.phtml
@@ -64,7 +64,7 @@
             alert("login falhou");
             return false;
         } else {
-            alert("login concluido");
+                    //alert("login concluido");
         }
 
     }
