correção do link da area do candidato no cabeçalho cadastro-candidato

--- a/web/layouts/cadastro-candidato/cabecalho.phtml
+++ b/web/layouts/cadastro-candidato/cabecalho.phtml
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link mx-2 active" aria-current="page" href="/candidato/cadastrar">
+                    <a class="nav-link mx-2 active" aria-current="page" href="/candidato/login">
                         <i class="fas fa-users"></i> Área do candidato
                     </a>
                 </li>
