alterado painel de vagas quando candidato logado

--- a/web/views/candidato/login.phtml
+++ b/web/views/candidato/login.phtml
@@ -30,10 +30,10 @@
             <div class="d-grid">
                 <button  id="icon-button" class="btn btn-warning" type="submit">
                     <i class="fas fa-lock icon-transition"></i>
-                    <i class="fas fa-lock-open icon-transition" style="display: none;"></i>
-                    Acessar
-                </button>
-                <a href="/candidato/cadastrar" class="link-secondary text-decoration-none"><button class="btn btn-secondary mt-3" type="button">Você é novo aqui? Cadastrar</button></a>
+                    <i class="fas fa-lock-open icon-transition" style="display: none;" ></i>
+                        Acessar</a>
+                    </button>
+                <button class="btn btn-secondary mt-3"><a class="nav-link mx-2 active" aria-current="page" href="/candidato/cadastrar">Você é novo aqui? Cadastrar</a></button>
             </div>
         </div>
 
@@ -49,7 +49,7 @@
                     alert("login falhou");
                     return false;
                 }else{
-                    //alert("login concluido");
+                    alert("login concluido");
                 }
 
             }
