--- a/web/views/candidato/cadastrar.phtml
+++ b/web/views/candidato/cadastrar.phtml
@@ -1,6 +1,10 @@
 <div class="container container-sm w-75 form-bg-white pt-4 pb-4">
     <form action="/candidato/processaCadastrar" method="post">
-    <?php if (!empty($_SESSION['CadastroRealizado'])) { ?> <div><?php echo $_SESSION['CadastroRealizado'];?></div> <?php } ?>
+    <?php if (!empty($_SESSION['CadastroRealizado'])) : ?>
+    <div>
+        <?=$_SESSION['CadastroRealizado'];?>
+    </div>
+<?php endif; ?>
         <input type="hidden" name="status" id="status" value="1">
         <div class="row gy-3 gy-md-4 overflow-hidden">
             <div class="col-md-6 form-floating">
