--- a/web/views/autenticacao/login.phtml
+++ b/web/views/autenticacao/login.phtml
@@ -1,3 +1,4 @@
+<h4>Área da empresa</h4>
 <form action="/autenticacao/processaLogin" method="post">
     <div class="row gy-3 gy-md-4 overflow-hidden mt-5">
         <div class="col-12">
