--- a/web/layouts/painel-vagas/cabecalho.phtml
+++ b/web/layouts/painel-vagas/cabecalho.phtml
@@ -19,7 +19,9 @@
                 <br>
             <?php endif; ?>
         </div>
-
+        <div style="margin-left: 5px;">
+            <a class="link-secondary text-decoration-none" href="/candidato/processaLogout">Sair</a>
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
