--- a/web/assets/css/painel.css
+++ b/web/assets/css/painel.css
@@ -85,12 +85,12 @@ table, table td {
 
 .titulo {
     /*background-color: #093B6E;*/
-    color: white !important;;
-    /*border-style: solid;*/
-    /*border-width: 1px 0 0 0;*/
-    /*border-color: #F1F3F4 !important;*/
-    background: rgb(9,59,110);
-    background: linear-gradient(180deg, rgba(9,59,110,1) 80%, rgba(241,243,244,1) 100%);
+    color: white !important;
+    border-style: solid;
+    border-width: 1px 1px 0 1px;
+    border-color: #F1F3F4 !important;
+    background: rgb(9, 59, 110);
+    /*background: linear-gradient(180deg, rgba(9,59,110,1) 80%, rgba(241,243,244,1) 100%);*/
     height: 40px;
 
 }
@@ -101,11 +101,12 @@ table, table td {
 }
 
 .ver-mais {
-    background: linear-gradient(180deg, rgba(241, 243, 244, 1) 0%, rgba(9, 59, 110, 1) 40%);
+    /*background: linear-gradient(180deg, rgba(241, 243, 244, 1) 0%, rgba(9, 59, 110, 1) 40%);*/
     height: 40px;
 }
 
 .ver-mais a {
     text-decoration: none;
-    color: white
+    color: #093B6E;
+    padding-bottom: 5px;
 }
