--- a/web/views/candidato/cadastrar.phtml
+++ b/web/views/candidato/cadastrar.phtml
@@ -1,10 +1,6 @@
 <div class="container container-sm w-75 form-bg-white pt-4 pb-4">
     <form action="/candidato/processaCadastrar" method="post">
-    <?php if (!empty($_SESSION['FalhaAoCadastrar'])) : ?>
-    <div>
-        <?=$_SESSION['FalhaAoCadastrar'];?>
-    </div>
-<?php endif; ?>
+    <?php FlashMessage::getMessage() ?>
         <input type="hidden" name="status" id="status" value="1">
         <div class="row gy-3 gy-md-4 overflow-hidden">
             <div class="col-md-6 form-floating">
